# newkern

./: .clang-format  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  LICENSE  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  autogen.sh  configure  configure.ac  gen.sh  install-sh  makefil0  purge.sh
.cache/clangd/index/: asm.h.69F424B48DFF553F.idx  config.h.E0C71654179F030A.idx  entry.S.FF55561D4B2BA4EC.idx  gcc-limits.h.AF31B774B9D1D485.idx  gcc-stdarg.h.8A5F64DF17EC482C.idx  gcc-stddef.h.E6D3A3FAA8BE30D7.idx  gcc-stdint.h.98F00AD2152C3299.idx  limits.h.E16F4BF96C0FF22E.idx  main.c.8B687688FACB77AB.idx  printf.c.2BC4862359CC0EAA.idx  stdarg.h.14A9FA316A054F72.idx  stddef.h.88BED27F996DEAE5.idx  stdint.h.5FA4C3ECBF9D7AB1.idx  stdio.h.4B3AC68B72A3DC7B.idx  string.c.5610ED884FF826C9.idx  string.h.C09CF0F1F173C6C0.idx  tty.c.BF15B528AA4661FA.idx  tty.h.FD5756F391C220C7.idx  vga.h.C00AD65E4CF29C8D.idx
Documentation/: IA-32e_Interrupts.md
EXTERNAL_HEADERS/: gcc-stdarg.h  gcc-stddef.h  xv6-asm.h
arch/i686/: Makefile  asm.h  entry.S
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1
cf/: limine.cfg  x86_64-clang.cmake  x86_64-gcc.cmake  x86_64-k.ld  x86_64_multiboot-k.ld
dwb/man/: extern-headers.man
extern-headers/: gcc-limits.h  gcc-stdint.h  llvm-cpuid.h
hal/: cpuid.h  hal.h
hal/i686/: Makefile  cpu.c  cpu.h  gdt.c  gdt.h  hal-init.c  idt.h
hals/halx86_64/: boot.S  boot.c  conflow.c  id.S  llio.c  stvl.h  stvl_tty.c
hals/halx86_64_multiboot/: def_video.c  def_video.h  digmb.c
i686/: asm.c  c-asm.h  cpu.h  entry.S  gdt.h  hal-init.c  hal-off.c  idone.c  idt.c  idt.h  pic.c  pit.c  pit.h  serial.c  serial.h  setvec.c
i686/hal/: cpuid.h  hal.h
inc/: def_video.h  hal.h  kd.h  krnl.h  multiboot.h  nkdef.h  offsets.h  printf.h  stdarg.h
kd64/: stty.c
ke/: def_pager.c  def_video.c  digmb.c  kmain.c  panic.c  printf.c
kern/: Makefile  init.c  main.c  strtab.c  tty.c
libc/: Makefile  printf.c  string.c
m4/: elf.m4
man/: arch.man  compilation.man  extern-headers.man  general.man  hal.man
nk/: nk32.h
san/: abort.c  add_overflow.c  bounds.c  cfi.c  divrem_overflow.c  float_cast.c  function_type.c  invalid.c  neg_overflow.c  non_null.c  pointer_overflow.c  return.c  shift_oob.c  sub_overflow.c  type_mismatch.c  ubsan.h  unreachable.c  var_arg.c
stdinclude/: limits.h  locale.h  stdarg.h  stddef.h  stdint.h  stdio.h  string.h
sys/: config.h.in  limits.h  locale.h  stdarg.h  stddef.h  stdint.h  string.h  tty.h  vga.h
